include version num in release ZIPs